# dotnet-native

./: .appveyor.yml  .dockerignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Directory.Build.props  Makefile  Project.sln  README.md  dotnet.sln  linux.sh
.github/workflows/: amd64_docker.yml  amd64_linux.yml  amd64_macos.yml  amd64_tfm.yml  amd64_windows.yml  arm64_macos.yml  docker.yml  linux.yml  macos.yml  osx.yml  win.yml
.travis/: install.sh  script.sh
Bar/: CMakeLists.txt  Program.cs
Bar/dotnet/: CMakeLists.txt
Foo/: CMakeLists.txt  Foo.cs  Program.cs
Foo/dotnet/: CMakeLists.txt  foo.i
Foo/include/foo/: Foo.hpp
Foo/src/: Foo.cpp
Foo/test/: CMakeLists.txt
Foo/test/src/: Foo_UT.cpp
FooBar/: CMakeLists.txt  FooBar.csproj  Program.cs
FooBar/dotnet/: CMakeLists.txt
Mizux.Bar/: Bar.cs  Mizux.Bar.csproj
Mizux.BarApp/: Mizux.BarApp.csproj  Program.cs
Mizux.Foo/: Mizux.Foo.csproj  runtime.json
Mizux.Foo.Tests/: Mizux.Foo.Tests.csproj  UnitTest1.cs
Mizux.FooApp/: Mizux.FooApp.csproj
Mizux.Sample/: Mizux.Sample.csproj  Program.cs
ci/: Makefile  README.md
ci/doc/: deps.dot
ci/docker/almalinux/: Dockerfile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/rockylinux/: Dockerfile
ci/docker/ubuntu/: Dockerfile
ci/sample/: Mizux.Sample.csproj  Sample.cs
ci/samples/: Mizux.Sample.csproj  Sample.cs
cmake/: DotnetNativeConfig.cmake.in  FooConfig.cmake.in  cpp.cmake  dotnet.cmake
doc/: full.dot  full_pipeline.dot  generate_image.sh  local_pipeline.dot
docs/: full_pipeline.dot  legend.dot  local_pipeline.dot
dotnet/: Directory.Build.props  Directory.Build.props.in  Example.csproj.in  FooTests.cs  Mizux.DotnetNative.FooApp.csproj.in  Mizux.DotnetNative.Tests.csproj.in  Mizux.DotnetNative.csproj.in  Mizux.DotnetNative.runtime.csproj.in  Mizux.Foo.csproj.in  Mizux.Foo.runtime.csproj.in  Mizux.FooApp.csproj.in  Mizux.FooTests.csproj.in  README.dotnet.md
example/Example/: Example.csproj  Program.cs
example/Example.Native/: Example.Native.csproj  Program.cs
examples/: CMakeLists.txt  Example.cs
runtime.linux-x64.Mizux.Foo/: runtime.linux-x64.Mizux.Foo.csproj
runtime.osx-x64.Mizux.Foo/: Foo.cs  Native.osx.cs  runtime.osx-x64.Mizux.Foo.csproj
runtime.win-x64.Mizux.Foo/: runtime.win-x64.Mizux.Foo.csproj
samples/: CMakeLists.txt
src/: Project.sln
src/Bar/: Bar.cs  Bar.csproj
src/BarApp/: BarApp.csproj
src/Foo/: Foo.cs  Foo.csproj  project.csproj  runtime.json
src/Foo.linux-x64/: Class1.cs  Foo.linux-x64.csproj  Native.cs  package.nuspec
src/Foo.linux-x64/runtimes/linux-x64/netstandard2.0/: Native.cs
src/Foo.osx-x64/: Class1.cs  Foo.osx-x64.csproj
src/Foo.osx-x64/runtimes/osx-x64/netstandard2.0/: Native.cs
src/Foo.win-x64/: Class1.cs  Foo.win-x64.csproj
src/Foo.win-x64/runtimes/win-x64/netstandard2.0/: Native.cs
src/FooApp/: FooApp.csproj  Program.cs  project.csproj
src/FooBar/: FooBar.csproj
src/FooBarApp/: FooBarApp.csproj  Program.cs
src/FooTest/: FooTest.csproj  UnitTest1.cs
src/runtime.linux-x64.Foo/: project.csproj  runtime.linux-x64.Foo.csproj
src/runtime.osx-x64.Foo/: runtime.osx-x64.Foo.csproj
src/runtime.win-x64.Foo/: Native.win.cs  project.csproj  runtime.win-x64.Foo.csproj
test/Bar.Tests/: Bar.Tests.csproj  UnitTest1.cs
test/Foo.Tests/: Foo.Tests.csproj  UnitTest1.cs
tests/: BarTests.cs  CMakeLists.txt  FooBarTests.cs  FooTests.cs
